# ABSurveys

./: .gitignore  README.md  index.html  map.html  pyproject.toml
evaluation/: maps.py  merge_surveys.py  survey_map.py
evaluation/maps/: README.md  main.py  map.js  map.py
evaluation/streetscore/: README.md  geotag_images.py  image_metadata.py  inference.py  main.py  map.html  model.py  pyproject.toml  streetscore.ipynb  streetscore.py  train.py
