[project]
name = "ABsurveys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "branca>=0.8.2",
    "fastapi>=0.136.3",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "ipykernel>=7.3.0",
    "mapclassify>=2.10.0",
    "matplotlib>=3.11.0",
    "motor>=3.7.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "trueskill>=0.4.5",
    "unicorn>=2.1.4",
]
